--- a/package.json
+++ b/package.json
@@ -7,8 +7,18 @@
     "build": "react-scripts build",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --fix --ext .ts,.tsx ",
+    "precommit": "lint-staged",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "lint-staged": {
+    "gitDir": "./src",
+    "linters": {
+      "*.{ts,tsx}": [
+        "lint:fix",
+        "git add"
+      ]
+    }
   },
   "dependencies": {
     "react": "^16.13.1",
@@ -30,6 +40,8 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "2.5.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.0",
     "prettier": "^2.0.5",
     "typescript": "^3.8.3"
   },
