--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "build": "react-scripts build",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --fix --ext .ts,.tsx ",
-    "precommit": "lint-staged",
+    "precommit": "echo 'Pre-commit checks' && lint-staged",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "pre-commit": [
+    "precommit"
+  ],
   "lint-staged": {
-    "gitDir": "./src",
-    "linters": {
-      "*.{ts,tsx}": [
-        "lint:fix",
-        "git add"
-      ]
-    }
+    "**/*.ts?(x)": [
+      "lint"
+    ]
   },
   "dependencies": {
     "react": "^16.13.1",
@@ -42,6 +41,7 @@
     "eslint-plugin-react-hooks": "2.5.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^2.0.5",
     "typescript": "^3.8.3"
   },
