--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
